<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/activity_user_login_root_view"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:id="@+id/activity_user_login_top_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/green"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

        <Button
                android:id="@+id/activity_user_login_top_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/back_bg"/>
    </RelativeLayout>


	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center_horizontal"
			android:orientation="vertical">
		<ImageView
				android:id="@+id/activity_user_login_icon"
				android:layout_width="200dp"
				android:layout_height="150dp"
				android:layout_marginTop="50dp"
				android:layout_marginBottom="60dp"
				android:src="@drawable/elight_logo"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:background="@drawable/input_bg"
				android:orientation="vertical">

			<FrameLayout
					android:id="@+id/activity_user_login_user_type"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/base_action_bar_height"
					android:background="@color/transparent"
					android:drawableLeft="@drawable/login_icon_account"
					android:drawablePadding="25dip"
					android:hint="@string/login_username_hint"
					android:shadowDx="0.0"
					android:shadowDy="1.0"
					android:shadowRadius="1.0"
					android:textColorHint="#ffdddddd">

				<RelativeLayout
						android:id="@+id/activity_user_login_lowwarn"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:minHeight="40dp" >

					<TextView
							android:id="@+id/activity_user_login_pre"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_centerVertical="true"
							android:layout_marginRight="10dp"
							android:text="    用户类型选择 :"
							android:textColor="#ffdddddd"
							android:textSize="20sp"
							android:drawableLeft="@drawable/login_icon_account" >
					</TextView>

					<TextView
							android:id="@+id/activity_user_login_value"
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:minHeight="40dp"
							android:layout_centerVertical="true"
							android:layout_marginRight="10dp"
							android:background="@drawable/edit_text1"
							android:text="教师"
							android:textSize="20sp"
							android:textColor="#ff000000"
							android:gravity="left|center"
							android:layout_toRightOf="@id/activity_user_login_pre">
					</TextView>

					<ImageButton
							android:id="@+id/activity_user_login_dropdown"
							android:layout_width="36px"
							android:layout_height="20px"
							android:layout_alignParentRight="true"
							android:layout_marginRight="15dp"
							android:layout_centerVertical="true"
							android:background="@drawable/down_arrow" />
				</RelativeLayout>


			</FrameLayout>

			<View
					android:layout_width="match_parent"
					android:layout_height="8.5dp"
					android:background="@drawable/base_horizontal_line"/>

			<EditText
					android:id="@+id/activity_user_login_username"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/base_action_bar_height"
					android:background="@color/transparent"
					android:drawableLeft="@drawable/login_icon_account"
					android:drawablePadding="25dip"
					android:hint="@string/login_username_hint"
					android:shadowDx="0.0"
					android:shadowDy="1.0"
					android:shadowRadius="1.0"
					android:textColorHint="#ffdddddd"/>

			<View
					android:layout_width="match_parent"
					android:layout_height="1.5dp"
					android:background="@drawable/base_horizontal_line"/>
			<EditText
					android:id="@+id/activity_user_login_password"
					android:layout_width="fill_parent"
					android:layout_height="@dimen/base_action_bar_height"
					android:background="@color/transparent"
					android:drawableLeft="@drawable/login_icon_password"
					android:drawablePadding="25dip"
					android:hint="@string/login_password_hint"
					android:inputType="textPassword"
					android:textColorHint="#ffdddddd"/>
		</LinearLayout>

		<Button
				android:id="@+id/activity_user_login_login"
				android:layout_width="match_parent"
				android:layout_height="@dimen/base_action_bar_height"
				android:layout_margin="@dimen/activity_vertical_margin"
				android:background="@drawable/btn_login_selector"
				android:gravity="center"
				android:text="@string/login"
				android:textColor="@color/base_color_text_white"
				android:textSize="@dimen/text_size_large"/>

	</LinearLayout>


</LinearLayout>